<resources>
    <string name="app_name" translatable="false">Closet App</string>
    <string name="main_screenDescription">Closet main screen</string>
    <string name="submenu_upload" translatable="false">Upload</string>
    <string name="submenu_head">Head</string>
    <string name="submenu_upperbody">Upper body</string>
    <string name="submenu_lowerbody">Lower body</string>
    <string name="submenu_home">Home</string>
    <string name="app_home">Home</string>
    <string name="menu_upload_camera">Camera</string>
    <string name="menu_upload_gallery">Gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submenu_info">Info</string>
    <string name="title_lowerbody" translatable="false">Lower body</string>
    <string name="title_upperbody" translatable="false">Upper body</string>
    <string name="title_head" translatable="false">Head</string>
    <string name="submit">Submit</string>
    <string name="errSavingImg">Error saving image</string>
    <string name="scsSavingImg">Saved successful</string>
    <string name="hat">Hat</string>
    <string name="glasses">Glasses</string>
    <string name="jewelry">Jewelry</string>
    <string name="others">Others</string>
    <string name="tshirt">T shirt</string>
    <string name="jacket">Jacket</string>
    <string name="sweater">Sweater</string>
    <string name="pants">Trousers</string>
    <string name="skirt">Skirt</string>
    <string name="bottom">Bottom</string>
    <string name="shorts">Shorts</string>
    <string name="errImagePermission">Need storage privileges to save the image</string>
    <string name="all">All</string>
    <string name="txtI18nChanged">Language was changed correctly</string>
    <string name="addNewCollection">Add new collection</string>
    <string name="newCollection">New collection</string>
    <string name="errSaving">Error saving</string>
    <string name="errSelect">Select at least one</string>
    <string name="scsSaving">Saved sucessfull</string>
    <string name="collecionList">Collection List</string>
    <string name="collections">Collections</string>
    <string name="changeLenguage">Change lenguage</string>

</resources>